[package]
name = "quickcheck-arbitrary-derive"
description = "Derive QuickCheck's Arbitrary trait"
repository = "https://github.com/NathanSnail/quickcheck-derive"
readme = "../README.md"
version = "0.2.2"
edition = "2024"
license = "MIT OR Unlicense"

[dependencies]
proc-macro2 = "1.0.95"
quickcheck = "1.0.3"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
